# SpadesX

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: cmake.yml  docker.yml
Resources/: config.toml
Resources/map_scripts/: babel.lua  bots.lua  example_gamemode.lua  headshot_only.lua  restock_command.lua  restock_on_kill.lua  shotgun_are_grenade_launchers.lua  shotguns_are_grenade_launchers.lua  team_colors.lua
Resources/maps/Border_Hallway/: Border_Hallway.toml
Resources/scripts/: init.lua
Source/: CMakeLists.txt  Main.c
Source/Server/: Block.c  CMakeLists.txt  Grenade.c  Grenade.h  IntelTent.c  ParseConvert.c  ParseConvert.h  Player.c  Player.h  Plugin.c  Plugin.h  PluginAPI.h  Server.c
Source/Server/Commands/: Ban.c  Clin.c  CommandManager.c  Help.c  Kick.c  Kill.c  Mute.c  PrivateMessage.c  Ratio.c  Teleport.c  Toggles.c  Unban.c
Source/Server/Packets/: BlockLine.c  CreatePlayer.c  ExistingPlayer.c  Grenade.c  Hit.c  IntelDrop.c  KillAction.c  Packets.h  PlayerLeft.c  SetColor.c
Source/Server/Scripting/: ScriptingAPI.c  ScriptingAPI.h
Source/Server/Scripting/Lua/: LuaBindings.c  LuaBindings.h  LuaScriptManager.c  LuaScriptManager.h  LuaTypes.c  LuaTypes.h
Source/Server/Structs/: MapStruct.h  PlayerStruct.h  ProtocolStruct.h  ServerStruct.h  StartStruct.h
Source/Util/: CMakeLists.txt  Enums.h  MapScanner.c  MapScanner.h  Weapon.c
Source/Util/Checks/: PacketChecks.c
plugins/: CMakeLists.txt  example_gamemode.c
